yolov2-tiny off

--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CUDA_ENABLE ON)
 set(CUDNN_ENABLE ON) #  set(CUDNN_ENABLE ON)
 set(FP16_ENABLE ON)
 
-set(DOWNLOAD_YOLOV2_TINY ON)
+set(DOWNLOAD_YOLOV2_TINY OFF)
 set(DOWNLOAD_YOLOV3 OFF)
 set(DOWNLOAD_YOLOV4 OFF)
 set(DOWNLOAD_YOLOV4_CSP ON)
