Added X, Y Calculation of Objects

--- a/darknet_ros/config/ros.yaml
+++ b/darknet_ros/config/ros.yaml
@@ -3,6 +3,10 @@ subscribers:
   camera_reading:
     topic: /camera/color/image_raw
     queue_size: 1
+
+  depth_cam_info:
+    topic: /camera/aligned_depth_to_color/camera_info
+    queue_size: 1
   
 actions:
 
