Add nlohmann_json as a dependency

--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <!-- <depend>darknet_ros_msgs</depend> -->
   <depend>umd_rtsp</depend>
   <depend>umd_lib_http</depend>
+  <depend>nlohmann_json</depend>
 
   <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
